--- a/assingment/style/index.css
+++ b/assingment/style/index.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 653px;
     background-color: #f4f4f4;
 }
 
